fix the image not showing up on login and registration page

--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -72,7 +72,7 @@ input {
 }
 
 .container {
-    background-color: #000000;
+    background-color: #FFFFFF;
     border-radius: 10px;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
     0 10px 10px rgba(0, 0, 0, 0.22);
@@ -92,6 +92,12 @@ input {
 
 .sign-in-container {
     left: 0;
+    width: 50%;
+    z-index: 1;
+}
+
+.sign-in-image {
+    right: 0;
     width: 50%;
     z-index: 2;
 }
